--- a/plugin.xml
+++ b/plugin.xml
@@ -25,18 +25,10 @@
             </feature>
         </config-file>
 
-        <config-file target="res/values/strings.xml" parent="/*">
-            <string name="custom_background_color">$BACKGROUND_COLOR</string>
-        </config-file>
+        <resource-file src="src/android/styles.xml" target="res/values/styles.xml" />
+        <resource-file src="src/android/styles-material.xml" target="res/values-v21/styles.xml" />
 
-        <config-file target="./res/values/strings.xml" parent="/resources">
-            <color name="CUSTOM_BACKGROUND_COLOR">$BACKGROUND_COLOR</color>
-            <style name="Theme.CordovaCustomBackground" parent="@android:style/Theme.NoTitleBar">
-                <item name="android:windowBackground">@color/CUSTOM_BACKGROUND_COLOR</item>
-            </style>
-        </config-file>
-
-        <edit-config file="AndroidManifest.xml" target="/manifest/application/activity[@android:name='MainActivity']"
+        <edit-config file="AndroidManifest.xml" target="/manifest/application/activity"
                      mode="merge">
             <activity android:theme="@style/Theme.CordovaCustomBackground"/>
         </edit-config>
